--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: hsl(0, 0%, 10%);
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.to-do-list{
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+h1{
+  font-size: 4rem;
+  color: white;
+}
+button{
+  font-size: 1.7rem;
+  font-weight: bold;
+  padding: 10px 20px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+}
+.add-button{
+  background-color: hsl(125, 47%, 54%);
+  margin-left: 5px;
+}
+.add-button:hover{
+  background-color: hsl(125, 47%, 44%);
+}
+.delete-button{
+  background-color: hsl(10, 90%, 50%);
+}
+.delete-button:hover{
+  background-color: hsl(10, 90%, 40%);
+}
+.move-button{
+  background-color: hsl(207, 90%, 64%);
+}
+.move-button:hover{
+  background-color: hsl(207, 90%, 50%);
+}
+.complete-button{
+  background-color: hsl(125, 47%, 44%);
+}
+.completed .text {
+  text-decoration: line-through;
+  color: #B7A1D9;
+}
+.complete-button:hover{
+  background-color: hsl(125, 47%, 34%);
+}
+input[type="text"]{
+  font-size: 1.6rem;
+  padding: 10px;
+  border: 2px solid hsla(0, 0%, 80%, 0.5);
+  border-radius: 5px;
+  color: hsl(0, 0%, 0%, 0.5);
+}
+ol{
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 0px;
+  justify-content: center;
+}
+li{
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 10px;
+  background-color: hsl(0, 0%, 97%);
+  margin-bottom: 10px;
+  border: 3px solid hsla(0, 0%, 85%, 0.75);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  width: 80%;
+}
+.text{
+  flex: 1;
+  width: 55%;
+  word-wrap: break-word;
+  text-transform: uppercase;
+}
+.delete-button, .move-button, .complete-button{
+  padding: 8px 12px;
+  font-size: 1.4rem;
+  margin-left: 10px;
+}
+.content-style{
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 500px) and (max-width: 1090px) {
+  
+  h1{
+    font-size: 3rem;
+  }
+  li{
+    font-size: 1.5rem;
+    padding: 5px;
+    width: 86%;
+  }
+  .text{
+    flex: 1;
+    width: 35%;
+    word-wrap: break-word;
+  }
+  ol{
+    padding: 0;
+    margin-left: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  .content-style{
+    margin-left: 0px;
+    margin-right: auto;
+  }
 }
